@@ -2,25 +2,22 @@ package parse;
 
 import java.io.Serial;
 
+/**
+ * Checked exception caused by parsing.
+ * <p>MUTABILITY: This class is immutable.</p>
+ */
 public class ParsingExcpetion extends Exception {
+	/** Required field of a serializable class */
 	@Serial
 	private static final long serialVersionUID = 6537571119915166583L;
 
-	public final String parseInput;
-	public final String format;
-
-	public ParsingExcpetion(String description, String format, String parseInput) {
-		super(generateMessage(description, format, parseInput));
-		this.parseInput = parseInput;
-		this.format = format;
-	}
-
-	private static String generateMessage(String description, String format, String parseInput) {
-		return String.format(
-			"Parse exception (format: %s): %s\nWhile parsing: %s",
-			format,
-			description,
-			parseInput
-		);
+	/**
+	 * Constructs a {@link ParsingExcpetion}.
+	 * <p>REQUIREMENTS: All of the parameters must be non-null.</p>
+	 * @param description Description on what caused the exception.
+	 * @param format The name of the format that was being parsed.
+	 */
+	public ParsingExcpetion(String description, String format) {
+		super("Parse exception (format: %s): %s".formatted(format, description));
 	}
 }
